--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
 	<meta http-equiv="Content-Type" charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<link href="ooplibrary.css" rel="stylesheet" type="text/css">
-	<script src="ooplibrary.js"></script>
+	<!-- Load KangarooIMG Framework -->
+	<link href="kangarooimg.css" rel="stylesheet" type="text/css">
+	<script src="kangarooimg.js"></script>
+
 </head>
 <body>
 
+	<!-- example code -->
 	<script>
 	window.onload = function() {
 
@@ -37,5 +40,7 @@
 
 <div id='homeBoys'></div>
 
+	<!-- end of example -->
+	
 </body>
 </html>
